<resources>
    <string name="app_name">SPA CONTROL</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Login</string>
    <string name="AlertLoginEmailPassword">El email y contraseña son requeridos</string>
    <string name="logout">Salir</string>
    <string name="customers">Clientes</string>
    <string name="newCustomers">Nuevo Cliente</string>
    <string name="appointment">Citas</string>
    <string name="home">Inicio</string>
    <string name="customerName">Nombre del cliente</string>
    <string name="customer_email">Email del cliente</string>
    <string name="customerPhone">Tel. del cliente</string>
    <string name="createCustomer">Crear cliente</string>
    <string name="requireAllFields">Todos los campos son obigatorios</string>
    <string name="chargedCustomers">Clientes cargados</string>
    <string name="erroLoadCustomers">Error al cargar clientes!</string>
    <string name="CustomerInformation">Información del clientes</string>
    <string name="deleteCustomer">Eliminar cliente</string>
    <string name="ErrorDeleteCustomer">Error al borrar cliente</string>
    <string name="CustomerNotFound">El cliente no exite</string>
    <string name="LoadAppointments">Cargando citas</string>
    <string name="ErrorLoadAppointments">Error al cargar citas</string>
    <string name="deleteAppointment">Eliminar cita</string>
    <string name="AppointmentInformation">Información de la cita</string>
    <string name="AppointmentNotFound">La cita no existe</string>
    <string name="newAppointment">Nueva cita</string>
    <string name="room">Salón</string>
    <string name="createAppointment">Crear cita</string>
    <string name="selectDate">Seleccionar fecha</string>
    <string name="selectDay">Seleccione el día</string>
    <string name="note">Nota</string>
    <string name="room1">Salón 1</string>
    <string name="room2">Salón 2</string>
    <string name="room3">Salón 3</string>
    <string name="room4">Salón 4</string>
    <string name="selectRoom">Seleccione salón</string>
    <string name="RequireField">Campo obligatorio</string>
    <string name="SomeFIeldNull">Faltan campos por completar</string>
</resources>