<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="50dp"
    tools:context=".ui.NewCustomerActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/newAppointment"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:inputType="textEmailAddress"
        android:textSize="24sp" />
    <EditText
        android:id="@+id/etNewCustomerEmail"
        android:hint="@string/customer_email"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectRoom" />

    <RadioGroup
        android:id="@+id/rdRoomNewCustomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/rbR1">

        <RadioButton
            android:id="@+id/rbR1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room1" />

        <RadioButton
            android:id="@+id/rbR2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room2" />

        <RadioButton
            android:id="@+id/rbR3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room3" />

    </RadioGroup>


    <EditText
        android:id="@+id/etNewAppointmentNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note"
        android:lines="4"
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:maxLength="1024" />

    <EditText
        android:id="@+id/etNewAppointmentDay"
        android:hint="@string/selectDay"
        android:inputType="text"
        android:clickable="false"
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



    <Button
        android:id="@+id/btnCreate"
        android:text="@string/createAppointment"
        android:layout_marginBottom="64dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>